# Automatic-Photo-Namer

./: .gitignore  LICENSE  README.md  README.me  pyproject.toml
photonamer/: cli.py  parser.py  test.py  utils.py  vision.py
src/: cli.py  parser.py  test.py  utils.py  vision.py
