[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photonamer"
version = "0.1.0"
description = "Autonomous AI Photo Namer using MLX"
dependencies = [
    "typer",
    "rich",
    "mlx-vlm",
    "Pillow",
    "exifread"
]

[project.scripts]
photonamer = "photonamer.cli:app"