[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photonamer"
version = "0.1.0"
description = "Autonomous AI Photo Namer using MLX"
dependencies = [
    "typer>=0.24.1",
    "rich>=14.3.3",
    "mlx-vlm>=0.4.2",
    "Pillow>=12.1.1",
    "exifread>=3.5.1",
    "transformers>=5.4.0",
    "qwen-vl-utils>=0.0.14",
    "torchvision>=0.26.0"
]

[project.scripts]
photonamer = "photonamer.cli:app"